Remove overflow to resolve issue with secondary nav

--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -133,7 +133,6 @@
   /* Menu styles */
   .menu-primary {
     display: block;
-    overflow: auto;
     width: 100%;
   }
 
